--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -14,10 +14,17 @@
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
+        <li ng-show="isLoggedIn()"><a href="/profile/{{getCurrentUser().name}}">Profile</a></li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <li>
+          <input type="text" class="form-control" ng-model="searchQuery" ng-change="change()">
+          <div ng-show="searchQuery" ng-repeat="obj in objs">
+            <a href="/profile/{{obj.name}}">{{obj.name}}</a>
+          </div>
+        </li>
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
         <li ng-show="isLoggedIn()"><p class="navbar-text">Hello {{ getCurrentUser().name }}</p> </li>
