changed the look, suhas should add backend to these files

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -2,7 +2,10 @@
 /**
  * Bootstrap Fonts
  */
-
+body    {
+    background-color:white ;
+    color:black;
+}
 @font-face {
     font-family: 'Glyphicons Halflings';
     src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot');
