--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -3,18 +3,14 @@
             height:100px;
         }
         #main_stage  {
-            background-color:#333;
+            background-color:;
             height:auto;
-            float:left;
             box-sizing:border-box;
-            box-shadow:0px 5px 10px BLACK;
             margin:0% auto;
-            max-width:72%;
-            width:auto;
+            float:none;
             padding:10px 10px;
             overflow:visible;
             word-wrap: break-word;
-            min-width:442px;
         }
         #genres{
             background-color:#333;
@@ -23,5 +19,42 @@
             height:500px;
             float:left;
             margin:0% 2%;
-            width:20%;
+        }
+        #thumbs {
+                float:left;
+                position: relative;
+                padding: 10px;
+        }
+        #thumb_trnsprnt {
+            width:220px;
+            height: 140px;
+            background-color:black;
+            position: absolute;
+            opacity:0.8;
+            display:none;
+            top:10px;
+            left:10px;
+        }
+        #thumb_cntnt    {
+            display:none;
+            color:white;
+            width:220px;
+            height: 140px;
+            position: absolute;
+            top:10px;
+            left:10px;
+            padding:10px;
+            word-wrap:break-word;
+            overflow: hidden;
+        }
+
+        #thumbs:hover #thumb_cntnt , #thumbs:hover #thumb_trnsprnt {
+            display:block;
+        }
+        #dashbrd_cntnt  {
+            display: inline;
+            float: none;
+            text-align: center;
+            margin: 0px auto;
+            word-wrap:normal;
         }
