--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -1,7 +1,3 @@
-body    {
-                color:white;
-                font-family:"verdana";
-            }
             #banner {
                     margin:0px;
                     text-align:left;
@@ -9,10 +5,17 @@ body    {
             #user_profile   {
                 margin:10px auto;
                 padding:10px 10px;
+                position: absolute;
+                top: 60px;
+                left:0px;
             }
             #pro_pic    {
-                width:320px;
+                width:100%;
+                height: 100%;
+                top:-60px;
                 float:left;
+                position: relative;
+
             }
             #info   {
                 color:black;
@@ -32,4 +35,8 @@ body    {
 
             float:;
             width:auto;
+            }
+            #user_hist_div2 {
+                text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+                color:white;
             }
