--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -1,3 +1,6 @@
+*   {
+    box-sizing:border-box;
+}
 body {
             ;
             position:relative;
@@ -5,19 +8,21 @@ body {
             top:0px;
             margin:0px;
             font-family:"verdane";
+            background-color: 3b3a35;
             }
 #top_logo {
-            background-color:#00001f;
-            height:50px;
+            background-color:#0f6f84;
+            height:60px;
             width:100%;
             background-size:10px 100%;
             box-sizing:border-box;
-            box-shadow:0px 5px 10px BLACK;
+            box-shaddow:0px 5px 10px BLACK;
             position:fixed;
             top:0px;
+            z-index: 1;
         }
         #hidden {
-            height:50px;
+            height:60px;
         }
         #logo {
             font-size:30px;
@@ -32,10 +37,12 @@ body {
             padding:14.5px 50px;
         }
         #nav    {
-            background-color:#FFDE00;
+            background-color:#ffffff;
             font-size:15px;
             float:left;
             padding:0px 30px;
+            top:4px;
+            position: relative;
         }
         ul.drop_nav {
             list-style-type:none;
@@ -63,7 +70,6 @@ body {
             color:black;
         }
         .stage {
-            background-color:#131313;
             box-sizing:border-box;
             box-shadow:0px 5px 10px BLACK;
             height:auto;
