--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -8,7 +8,7 @@
             box-sizing:border-box;
             margin:0% auto;
             float:none;
-            padding:10px 10px;
+            padding:40px 10px;
             overflow:visible;
             word-wrap: break-word;
         }
@@ -20,35 +20,43 @@
             float:left;
             margin:0% 2%;
         }
-        #thumbs {
+        .thumbs {
+                box-sizing:border-box;
                 float:left;
                 position: relative;
-                padding: 10px;
+                padding:0px;
+                overflow: hidden;
+                
+                
         }
-        #thumb_trnsprnt {
-            width:220px;
-            height: 140px;
+        .thumb_trnsprnt {
+            margin: 0px;
+            padding:0px;
+            box-sizing:content-box;
+            width:100%;
+            height: 100%;
             background-color:black;
             position: absolute;
             opacity:0.8;
             display:none;
-            top:10px;
-            left:10px;
+            top:0px;
+            left:0px;
+
         }
-        #thumb_cntnt    {
+        .thumb_cntnt    {
             display:none;
             color:white;
-            width:220px;
-            height: 140px;
+            width:100%;
+            height:100%;            
             position: absolute;
-            top:10px;
-            left:10px;
-            padding:10px;
+            top:0px;
+            left:0px;
+            padding:20% 10%;
             word-wrap:break-word;
             overflow: hidden;
         }
 
-        #thumbs:hover #thumb_cntnt , #thumbs:hover #thumb_trnsprnt {
+        .thumbs:hover .thumb_cntnt , .thumbs:hover .thumb_trnsprnt {
             display:block;
         }
         #dashbrd_cntnt  {
@@ -57,4 +65,18 @@
             text-align: center;
             margin: 0px auto;
             word-wrap:normal;
+
+
+        }  
+        .thumbs_out {
+           margin:10px;
+        }    
+        .thumbs_in  {
+            overflow: hidden;
+            position: relative;
+            text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+        }
+        .stagee {
+            background-image: url("http://p1.pichost.me/i/14/1366317.jpg");
+            height:700px;
         }
