--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -9,6 +9,11 @@
                 top: 60px;
                 left:0px;
             }
+            .profile_style  {
+                margin: 10px;
+                background-color: rgba(255,255,255,0.3);
+                padding:4px 10px;
+                    }
             #pro_pic    {
                 width:100%;
                 height: 100%;
@@ -16,6 +21,10 @@
                 float:left;
                position: relative;
 
+            }
+            #name   {
+                font-size: 30px;
+                color:#428BCA;
             }
             #info   {
                 color:black;
@@ -79,10 +88,13 @@
             }
             #user_art_info2 {
                 width: 500px;
-                height:218px;
+                height:286px;
                 background-color: white;
                 padding:10px;
             }
             .ul_thumb {
                 padding: 0px;
+            }
+            #li_thumb  {
+                height:100px;
             }
