tabs wrkng in this + css added

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -5,22 +5,26 @@
     <div id="search">
         <input type="text" class="form-control" ng-model="searchQuery" ng-change="change()">
           <div ng-show="searchQuery" ng-repeat="obj in objs" id="search_res">
-            <div id="indiv_res">
-                <a href="/profile/{{obj.name}}" >{{obj.name}}</a>
-            </div>
+            <a href="/profile/{{obj.name}}" >
+                <div id="indiv_res">
+                    {{obj.name}}
+                </div>
+            </a>
           </div>
     </div>
     <div id="nav">
-        <span class="nav" ng-click="toUploadPortal()">
-            <a href=""></a>
-        </span>
-        <span class="nav" id="dropdown">
-            <a href="/profile">{{getCurrentUser.name}}guest</a>
-            <ul class="drop-nav">
-                                    <li id="nav_li"><a href="#" class="dark">Settings</a></li>
-                                    <a href="/signout" class="dark"><li id="nav_li">Sign out</li></a>
+       
+        <div class="dropdown">
+            <a href="/profile" id="_logo">{{getCurrentUser.name}}Guest</a>            
+            <span class="dropdown-toggle" id="menu1" data-toggle="dropdown">
+            <span id="caretid">
+                <span class="caret" ></span></span>
+            </span>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                                     <div id="indiv_res"><a role="menuitem" tabindex="-1" href="#" ><li role="presentation">Settings</li></a></div>
+                                     <div id="indiv_res"><a role="menuitem" tabindex="-1" href="#" ><li role="presentation">Sign out</li></a></div>
                                 </ul>
-                        </span>
+         </div>
                 </div>
-   <!-- </div><div id="hidden"></div>
-    removed bcz of transparency of navbar-->
+    </div><div id="hidden"></div>
+        
