--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -1,6 +1,9 @@
+            #dashboard  {
+                background-image: url("Back-img/1366317.jpg");
+            }
  #unknown    {
-            background-color:;
-            height:100px;
+            background-color:rgba(0,0,0,0.3);
+            height:55px;
         }
         #main_stage  {
             background-color:;
@@ -23,9 +26,9 @@
         .thumbs {
                 box-sizing:border-box;
                 
-                position: ;
-                padding:0px;
-                overflow: hidden;           
+                position:relative;
+                padding:;
+                          
                 
         }
         .thumb_trnsprnt {
@@ -58,26 +61,49 @@
         .thumbs_in:hover .thumb_cntnt , .thumbs_in:hover .thumb_trnsprnt {
             display:block;
         }
+        #thumbs_in_dshbrd:hover .thumb_cntnt , #thumbs_in_dshbrd:hover .thumb_trnsprnt {
+            display:block;
+        }
         #dashbrd_cntnt  {
             display: inline;
             float: none;
             text-align: center;
             margin: 0px auto;
             word-wrap:normal;
+            width:1000px;
 
 
         }  
-        .thumbs_out {
-           margin:10px 0px;
+
+        
+        #thumbs_out_dshbrd {
+           margin:0px 0px;
            float: left;
-        }    
-        .thumbs_in  {
+            padding:15px;
+           
+        }  
+        
+        #thumbs_in_dshbrd  {
             overflow: hidden;
             position: relative;
             text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-            float: left;
+            
+            width: 100%;
+            height:100%;
+            border:5px solid white;
+            border-radius: 4px;
+            margin:0px auto;
+
+            
+        }
+        #user_art_pic   {
+
+
         }
         .stagee {
-            background-image: url("http://p1.pichost.me/i/14/1366317.jpg");
+            
             height:700px;
         }
+        #a  {
+            padding:10px;
+        }}
