--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,3 +1,4 @@
+
 <div id="top_logo" ng-controller="NavbarCtrl">
     <div id="logo">
         <a href="/" id="_logo"><span>Vedik</span></a>
@@ -12,7 +13,7 @@
     </div>
     <div id="nav">
       <div class="dropdown">
-            <a href="/profile" id="_logo">{{getCurrentUser.name}}Guest</a>         
+            <a href="/profile" id="_logo"><b>{{getCurrentUser.name}}Guest</b></a>         
             <span class="dropdown-toggle" id="log_details" >
             <span id="caretid">
                 <span class="caret" ></span></span>
