--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -8,7 +8,8 @@ body {
             top:0px;
             margin:0px;
             /*font-family:"verdane";*/
-            background-color: 3b3a35;
+           letter-spacing: 1.5px;
+            background-image: url("http://10steps.sg/wp-content/uploads//2012/11/White-christmas-light-background.jpg");
             font-size: 12px;
             }
 .centric    {
