--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -3,22 +3,30 @@
   color: #fff;
   background-color: #3B5998;
   border-color: #133783;
+  margin: 10px;
 }
 
 .btn-twitter {
   color: #fff;
   background-color: #2daddc;
   border-color: #0271bf;
+  margin: 10px;
 }
 
 .btn-google-plus {
   color: #fff;
   background-color: #dd4b39;
   border-color: #c53727;
+  margin: 10px;
 }
 
 .btn-github {
   color: #fff;
   background-color: #fafafa;
   border-color: #ccc;
+}
+
+#login  {
+  width: 60%;
+  margin: 5% auto;
 }
