--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -31,6 +31,7 @@
 			
 		width: 100%;
 		height: auto;
+		 transition: all 0.3s ease 0s;
 		
 	}
 	.img_div	{
@@ -72,7 +73,10 @@
 	.img_modal-body	{
 		padding: 0px;
 	}
-	#up 	{
+	.img_modal-body img 	{
+		box-shadow: 0px 20px 50px #000;
+	}
+	#up000;
 		width: 100%;
 	}
 	#play	{
@@ -84,3 +88,16 @@
 		margin: 0px auto;
 		left: 45%;
 	 	}
+
+	 	#user_poster    {
+                width: 100%
+            }
+	.thumbs_in:hover #img_post
+	{
+	        -webkit-transform: scale(1.3);
+	        -ms-transform: scale(1.3);
+	        transform: scale(1.3);
+	       
+	}
+
+
